@@ -1,3 +1,7 @@
+3736.	[bug]		nsupdate: When specifying a server by name,
+			fall back to alternate addresses if the first
+			address for that name is not reachable. [RT #25784]
+
 3734.	[bug]		Improve building with libtool. [RT #35314]
 
 3732.	[contrib]	Fixed a type mismatch causing the ODBC DLZ
